pre-wrap code in tooltip, fix #7437 (#8827)
pre-wrap code in tooltip, fix #7437

--- a/web/src/repo/_Tooltips.scss
+++ b/web/src/repo/_Tooltips.scss
@@ -10,6 +10,10 @@
     border-radius: 3px;
     box-shadow: 0 3px 12px rgba(27, 31, 35, 0.15);
 
+    pre code {
+        white-space: pre-wrap;
+    }
+
     &__title {
         flex: 1;
         margin-left: 0;
